--- a/src/main/resources/webcontent/about.html
+++ b/src/main/resources/webcontent/about.html
@@ -45,7 +45,7 @@
     </head>
     <body>
       <p class="left">
-        <img class="logo" src="images/icon_512x512.png"/>
+        <img class="logo" src="img/big-logo.png"/>
       </p>
       <h1>Shift</h1>
       <p>
