--- a/src/main/resources/webcontent/welcome.html
+++ b/src/main/resources/webcontent/welcome.html
@@ -67,7 +67,7 @@
     </head>
     <body>
       <p class="centered">
-        <img class="logo" src="images/icon_512x512.png"/>
+        <img class="logo" src="img/big-logo.png"/>
       </p>
       <h1>Welcome to Shift !</h1>
       <p>
