--- a/src/main/resources/webcontent/firstlaunch.html
+++ b/src/main/resources/webcontent/firstlaunch.html
@@ -6,7 +6,7 @@
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/welcome.css" />
+    <link rel="stylesheet" href="css/firstlaunch.css" />
     <link rel="stylesheet" href="css/general_enclosed_foundicons.css">
     <script src="js/vendor/modernizr.js"></script>
   </head>
